PWA support and prompt

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Logday | Never skip log day</title>
     <meta name="description" content="Track your workouts with Logday - Never skip log day">
     <meta name="theme-color" content="#2463EB">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Logday">
     <link rel="manifest" href="/manifest.json">
-    <link rel="apple-touch-icon" href="/pwa-192x192.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="mask-icon" href="/favicon.svg" color="#2463EB">
+    <meta name="msapplication-TileColor" content="#2463EB">
     <script>!function(w,d,i,s){function l(){if(!d.getElementById(i)){var f=d.getElementsByTagName(s)[0],e=d.createElement(s);e.type="text/javascript",e.async=!0,e.src="https://canny.io/sdk.js",f.parentNode.insertBefore(e,f)}}if("function"!=typeof w.Canny){var c=function(){c.q.push(arguments)};c.q=[],w.Canny=c,"complete"===d.readyState?l():w.attachEvent?w.attachEvent("onload",l):w.addEventListener("load",l,!1)}}(window,document,"canny-jssdk","script");</script>
   </head>
   <body>
